@@ -3638,8 +3638,11 @@ static void window_ride_operating_invalidate(rct_window* w)
         | (1ULL << WIDX_MINIMUM_LENGTH_CHECKBOX) | (1ULL << WIDX_MAXIMUM_LENGTH_CHECKBOX)
         | (1ULL << WIDX_SYNCHRONISE_WITH_ADJACENT_STATIONS_CHECKBOX));
 
-    // Lift hill speed
-    if (track_piece_is_available_for_ride_type(ride->type, TRACK_LIFT_HILL))
+    // Sometimes, only one of the alternatives support lift hill pieces. Make sure to check both.
+    bool hasAlternativeType = (RideData4[ride->type].flags & RIDE_TYPE_FLAG4_HAS_ALTERNATIVE_TRACK_TYPE) != 0;
+    if (track_piece_is_available_for_ride_type(ride->type, TRACK_LIFT_HILL)
+        || (hasAlternativeType
+            && track_piece_is_available_for_ride_type(RideData4[ride->type].alternate_type, TRACK_LIFT_HILL)))
     {
         window_ride_operating_widgets[WIDX_LIFT_HILL_SPEED_LABEL].type = WWT_LABEL;
         window_ride_operating_widgets[WIDX_LIFT_HILL_SPEED].type = WWT_SPINNER;
